# google_search_mcp

./: .env.example  .gitignore  Dockerfile.mcp  README.md  full_oauth_test.py  lambda_handler.py  pyproject.toml  server.py  server_http.py  server_http_stream.py  settings.toml  test_example.sh  test_http.py  tool-schema.json
.github/: copilot-instructions.md
deploy/: README-dcr.md  README-lambda-zip.md  automate_gateway.sh  build_dcr_zip.sh  build_zip.sh  cfn_deploy.sh  cloudformation-dcr.yaml  cloudformation-lambda.yaml  deploy_ecs_fargate.sh  deploy_lambda.sh  deploy_mcp_container.sh  gen_tool_schema.sh  oauth_dcr_handler.py  setup_gateway.sh  test_gateway.py
deploy_aws_agentcore_auth0/: README-lambda-zip.md  README.md  README_Auth0.md  build_zip.sh  cloudformation-lambda.yaml  deploy.project.env  deploy_gateway.sh  deploy_lambda.sh  gen_tool_schema.sh
deploy_aws_container/: README-lambda-zip.md  automate_gateway.sh  deploy_ecs_fargate.sh
scripts/: dump_tool_schema.py
scripts/examples/: test_example.sh  test_gateway_example.sh  test_mcp_container.py
tests/: README.md  __init__.py  conftest.py  test_client.py  test_logging.py  test_logging_dotenv.py  test_server.py  test_server_http.py  test_server_http_stream.py
